# clip-refiner

./: .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs
.cursor/rules/: comments.mdc  imports.mdc
crates/clip-refiner/: Cargo.toml  build.rs
crates/clip-refiner-core/: Cargo.toml
crates/clip-refiner-core/src/: hotkey_binding.rs  lib.rs
crates/clip-refiner-core/src/config/: clip_store_key.rs  migrate.rs  mod.rs  paths.rs  permissions.rs  persistence.rs  registered_clips.rs  registered_images.rs
crates/clip-refiner-core/src/config/serialize/: docs.rs  scalar.rs  template.rs
crates/clip-refiner-core/src/config/serialize/sections/: mod.rs  regex.rs
crates/clip-refiner-core/src/config/types/: app_config.rs  favorites.rs  hotkeys.rs  registered_clip.rs
crates/clip-refiner-core/src/platform/: clipboard_image.rs  mod.rs
crates/clip-refiner-core/src/refiner/: clipboard.rs  context.rs  mod.rs  ordered_value.rs  pipeline.rs  text_clipboard.rs
crates/clip-refiner-core/src/refiner/dispatch/: datetime.rs  excel.rs  line_actions.rs  path.rs  regex_modes.rs  to_yaml.rs  trim.rs  url.rs
crates/clip-refiner-core/src/refiner/mode/: defs.rs  meta.rs  mod.rs
crates/clip-refiner-core/src/refiner/transform/: json.rs  line_actions.rs  markdown.rs  url.rs  yaml.rs
crates/clip-refiner-core/src/security/: clip_cipher.rs  mod.rs  snippet.rs
crates/clip-refiner-core/src/test_helpers/: clipboard.rs  mod.rs
crates/clip-refiner-core/tests/: pipeline_api.rs  refine_modes.rs
crates/clip-refiner-core/tests/common/: mod.rs
crates/clip-refiner/src/: bootstrap.rs  lib.rs  logger.rs  main.rs
crates/clip-refiner/src/platform/: mod.rs  notify_windows.rs
crates/clip-refiner/src/platform/ocr/: linux.rs  macos.rs  mod.rs  normalize.rs  prepare.rs  windows.rs
crates/clip-refiner/src/platform/ocr_overlay/windows/: geometry.rs  layered.rs  types.rs  wndproc.rs
crates/clip-refiner/src/platform/screen_capture/: windows.rs  xcap.rs
crates/clip-refiner/src/test_helpers/: harness.rs  mod.rs
crates/clip-refiner/src/tray/: clipboard_change.rs  dispatch.rs  ocr_capture.rs
crates/clip-refiner/src/tray/event/: app_control.rs  config_reload.rs  menu_event_tests.rs  mod.rs  monitor.rs  refine.rs
crates/clip-refiner/src/tray/history/: mod.rs  store.rs
crates/clip-refiner/src/tray/hotkey/: mod.rs  register.rs  resolve.rs  settings.rs
crates/clip-refiner/src/tray/menu/: icon.rs  mod.rs  notification.rs
crates/clip-refiner/src/tray/notify/: message.rs
crates/clip-refiner/src/tray/state/: app_event.rs  app_state.rs  lock_ext.rs  monitor_snapshot.rs
crates/clip-refiner/src/tray/worker/: command.rs  handle.rs
crates/clip-refiner/src/ui/: clip_selector.css  quick_selector.html
crates/clip-refiner/tests/: history_flow.rs  library_api.rs  monitor_flow.rs  ocr_flow.rs
packaging/linux/: clip-refiner.desktop
scripts/: build.bat  cd-project-root.bat  clippy.bat  format.bat  run.bat  test.bat
scripts/common/: wait-if-double-clicked.ps1
scripts/linux/: build-deb.sh  check.sh  clippy.sh  rename-project.sh  test.sh
scripts/macos/: build-dmg.sh  check.sh  clippy.sh  rename-project.sh  test.sh
scripts/windows/: build-msi.ps1  check.ps1  clippy.ps1  generate-wix-assets.ps1  rename-project.ps1  test.ps1
src/: app.rs  autostart.rs  bootstrap.rs  config.rs  consts.rs  history_store.rs  hotkey_binding.rs  lib.rs  logger.rs  main.rs  notification.rs
src/coder/: decoder.rs  encoder.rs  mod.rs
src/config/: clip_store_key.rs  migrate.rs  mod.rs  paths.rs  permissions.rs  persistence.rs  registered_clips.rs  registered_images.rs  serialize.rs  types.rs
src/config/serialize/: docs.rs  document.rs  format.rs  mod.rs  template.rs
src/config/serialize/sections/: clips.rs  hotkeys.rs  mod.rs  notification.rs  regex.rs  root.rs  texts.rs
src/config/types/: app_config.rs  hotkeys.rs  mod.rs  monitor.rs  notification.rs  regex.rs
src/notification/: error.rs  success.rs
src/platform/: clipboard_image.rs  mod.rs  notify.rs  notify_windows.rs
src/platform/ocr/: mod.rs  windows.rs
src/platform/ocr_overlay/: mod.rs  windows.rs
src/platform/ocr_overlay/windows/: mod.rs
src/platform/screen_capture/: mod.rs  types.rs  windows.rs
src/refiner/: clipboard.rs  context.rs  datetime.rs  dispatch.rs  escape.rs  json.rs  line_actions.rs  markdown.rs  mod.rs  mode.rs  number.rs  path.rs  pipeline.rs  sort.rs  text_clipboard.rs  trim.rs  url.rs  utils.rs  yaml.rs
src/refiner/dispatch/: case_convert.rs  escape.rs  json_format.rs  markdown.rs  mod.rs  number.rs  to_json.rs
src/refiner/mode/: defs.rs  meta.rs
src/refiner/transform/: case_convert.rs  json.rs  line_actions.rs  markdown.rs  mod.rs  regex.rs  yaml.rs
src/security/: fingerprint.rs  limits.rs  mod.rs  secret.rs  snippet.rs
src/test_helpers/: clipboard.rs  config_dir.rs  harness.rs  mod.rs
src/tray/: app.rs  clip_selector.rs  clipboard_change.rs  clipboard_monitor.rs  dispatch.rs  event.rs  hotkey.rs  menu.rs  mod.rs  monitor.rs  notifier.rs  ocr_capture.rs  quick_selector.rs  runner.rs  selector.rs  selector_window.rs  state.rs  text_selector.rs  tray_app.rs  worker.rs
src/tray/event/: app_control.rs  clips.rs  config_reload.rs  favorites.rs  history.rs  menu_event_tests.rs  mod.rs  monitor.rs  notification.rs  ocr.rs  refine.rs  texts.rs
src/tray/history/: store.rs
src/tray/hotkey/: handler.rs  mod.rs  register.rs  resolve.rs
src/tray/menu/: clips.rs  history.rs  icon.rs  mod.rs  monitor.rs  notification.rs  refine.rs  texts.rs
src/tray/notify/: message.rs  mod.rs
src/tray/state/: app_event.rs  app_state.rs  lock_ext.rs  mod.rs
src/tray/worker/: command.rs  handlers.rs  mod.rs  monitor_loop.rs
src/ui/: clip_selector.html  ocr_overlay.html  quick_selector.html  selector-common.js  selector.css  selector.html  text_selector.html
tests/: library_api.rs  monitor_flow.rs  regex_flow.rs  worker_flow.rs
wix/: Eula.rtf  main.wxs
