[workspace]
members = ["crates/clip-refiner", "crates/clip-refiner-core"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.96"
authors = ["Yuto Hirata"]

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
incremental = false
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(screen_ocr)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
