[package]
name = "clip-refiner-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "ClipRefiner の加工ロジックと設定型 (GUI 非依存)"
readme = "../../README.md"
license-file = "../../LICENSE"

[lib]
name = "clip_refiner_core"
path = "src/lib.rs"

[features]
test-helpers = []

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
base64 = "0.22.1"
blake3 = "1.8"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.3"
directories = "6.0.0"
getrandom = "0.4.3"
global-hotkey = "0.8.0"
image = { version = "0.25.9", default-features = false, features = ["bmp", "jpeg", "png"] }
indexmap = { version = "2.14.0", features = ["serde"] }
percent-encoding = "2.3.2"
pulldown-cmark = "0.13.4"
regex = "1.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
zeroize = "1.8"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.0", features = ["std"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("test-helpers"))'] }
